syntax = "proto3";

option go_package = ".;remote";

service Environment {
  rpc Initialize(EnvironmentAttributes) returns (Empty) {}
  rpc Start(Empty) returns (State) {}
  rpc Step(Action) returns (StepResult) {}
  rpc GetAttributes(Empty) returns (Attributes) {}
}

service Agent {
	rpc Initialize(AgentAttributes) returns (Empty) {}
	rpc Start(State) returns (Action) {}
	rpc Step(StepResult) returns (Action) {}
}


message Run {
	fixed64 run = 1;
}

message Attributes {
	string attributes = 1;
}

message AgentAttributes {
	Run run = 1;
	Attributes experiment = 2;
	Attributes environment = 3;
}

message EnvironmentAttributes {
	Run run = 1;
	Attributes attributes = 2;
}

message State {
	repeated double values = 1;
}

message Action {
	fixed64 action = 1;
}

message StepResult {
	State state = 1;
	double reward = 2;
	bool terminal = 3;
}

message Empty {
}
